# MiniCalc

./: .gitignore  CMakeLists.txt  README.md
include/: Parser.h  Syntax.h  Walker.h  util.h  version.h
src/: Parser.cpp  Syntax.cpp  Walker.cpp  main.cpp  util.cpp
